Fixed the spacing in featured course and hoome page.....Extra spacing removed

--- a/src/app/pages/latestcourses/latestcourses.page.scss
+++ b/src/app/pages/latestcourses/latestcourses.page.scss
@@ -42,7 +42,7 @@
 .fcourse-card{
   margin: 10px;
   width: 250px;
-//  height: auto;
+  height: auto;
   margin-left: 10px;
 }
 .fcourse-card:hover{
